Some styles fixes and updates
This is ongoing work on the new default theme, but there isn't any ticket that
has been created to track its implementation, so going on without referencing
any ticket.

Content of this changeset:

* Set styles on <p>s and <li>s, styles which had disappeared after the CSS reset
* Set breadcrumb and actions' text a bit larger because otherwise it's
  unreadable on big screens
* Changed actions' hover style to not have an underline but a darker background
  instead so to be more legible

--- a/themes/default/style/page_layout.css
+++ b/themes/default/style/page_layout.css
@@ -343,6 +343,17 @@ background-image: -moz-linear-gradient(
   overflow:hidden;
 }
 
+.main-column ol,
+.main-column ul {
+  list-style: disc;
+  margin-left: 2em;
+}
+
+.main-column p {
+  margin: 1.12em 0;
+}
+
+
 /* 2 Column (left menu) settings */
 .leftmenu {
   background:#fff;    /* right column background colour */
@@ -484,7 +495,7 @@ body #search-box input.searchButton:hover {
 /* Breadcrumb starts */
 
 #breadcrumb {
-  font-size: 75%;
+  font-size: 90%;
   margin-bottom: 1em;
   position: absolute;
   top: 1em;
@@ -515,7 +526,6 @@ body #search-box input.searchButton:hover {
     -webkit-border-radius:5px;
     -moz-border-radius:5px;
     border-radius:5px;
-    font-size: 75%;
     opacity: 0.7;
 }
 
@@ -550,7 +560,14 @@ body #search-box input.searchButton:hover {
 
 #actionslot ul li a {
   display: inline-block;
-  padding: 0.35em;
+  padding-right: 0.5em;
+  padding-left: 0.3em;
+}
+
+#actionslot a:hover {
+  background-color: #ffc416;
+  border-radius: 0.5em;
+  text-decoration: none;
 }
 
 /* Byline */
